# haskell-extra

./: .hgignore  .hgtags  Makefile  README.md  add.sh  add2.sh  appstackball.sh  aurhaskell  auto.sh  autorot.sh  blacklist  build.sh  cabal.sh  cblrepo.db  clean.sh  coreball.sh  dbdiff.sh  detect.sh  distpkg  hackage2pkg.sh  madd.sh  mkdist.sh  packerlib  pacman-U.sh  pkg.sh  pkgdepend.sh  sync.sh  top.sh  upstream-memo.md  ustream.sh  version.sh
.pc/: applied-patches
P/: Agda.P  BNFC.P  BiobaseXNA.P  Boolean.P  CSPM-Frontend.P  CSPM-Interpreter.P  CSPM-ToProlog.P  HDBC-odbc.P  HDBC.P  HJScript.P  HList.P  HSH.P  HaXml.P  ListLike.P  MFlow.P  MemoTrie.P  PrimitiveArray.P  ReadArgs.P  RefSerialize.P  Stream.P  TCache.P  TypeCompose.P  Workflow.P  X11-extras.P  accelerate.P  active.P  adjunctions.P  antigate.P  archlinux.P  arrows.P  atto-lisp.P  attoparsec-conduit.P  attoparsec-enumerator.P  basic-prelude.P  binary-shared.P  biocore.P  blaze-builder-enumerator.P  blaze-svg.P  blaze-textual.P  bmp.P  (+159 more)
appstack/: updates.sh
haskell-accelerate/: PKGBUILD
haskell-active/: PKGBUILD
haskell-adjunctions/: PKGBUILD  haskell-adjunctions.install
haskell-aeson-pretty/: PKGBUILD  haskell-aeson-pretty.install
haskell-agda/: PKGBUILD  agda.install
haskell-annotated-wl-pprint/: PKGBUILD  haskell-annotated-wl-pprint.install
haskell-antigate/: PKGBUILD
haskell-archlinux/: PKGBUILD  haskell-archlinux.install
haskell-arrows/: PKGBUILD  haskell-arrows.install
haskell-atto-lisp/: PKGBUILD
haskell-attoparsec-conduit/: PKGBUILD
haskell-attoparsec-enumerator/: PKGBUILD
haskell-base64-string/: PKGBUILD
haskell-basic-prelude/: PKGBUILD
haskell-binary/: PKGBUILD  haskell-binary.install
haskell-binary-shared/: PKGBUILD
haskell-biobasexna/: PKGBUILD
haskell-biocore/: PKGBUILD
haskell-bitmap/: PKGBUILD
haskell-bitwise/: PKGBUILD
haskell-blaze-builder-enumerator/: PKGBUILD  haskell-blaze-builder-enumerator.install
haskell-blaze-svg/: PKGBUILD
haskell-blaze-textual/: PKGBUILD
haskell-bloomfilter/: PKGBUILD
haskell-bmp/: PKGBUILD
haskell-bnfc/: PKGBUILD
haskell-boolean/: PKGBUILD
haskell-boxes/: PKGBUILD  haskell-boxes.install
haskell-bpann/: PKGBUILD
haskell-bson/: PKGBUILD
haskell-bv/: PKGBUILD
haskell-byteable/: PKGBUILD  haskell-byteable.install
haskell-bytedump/: PKGBUILD  haskell-bytedump.install
haskell-bytestring-lexing/: PKGBUILD
haskell-bytestring-mmap/: PKGBUILD  haskell-bytestring-mmap.install
haskell-bzlib/: PKGBUILD  haskell-bzlib.install
haskell-carray/: PKGBUILD
haskell-charset/: PKGBUILD
haskell-charsetdetect-ae/: PKGBUILD  (+1 more)
patches/: Agda.cabal  Agda.pkgbuild  HDBC-odbc.pkgbuild  HDBC-odbc.pkgbuild~  MFlow.pkgbuild  X11-extras.pkgbuild  arithmoi.cabal  attoparsec-conduit.pkgbuild  bzlib.pkgbuild  charsetdetect-ae.pkgbuild  cmath.pkgbuild  diagrams.pkgbuild  direct-sqlite.pkgbuild  double-conversion.pkgbuild  fraction.cabal  gsl-random.pkgbuild  gtk3.pkgbuild  gtksourceview3.pkgbuild  gtksourceview3.pkgbuild~  hamlet.pkgbuild  haste-compiler.pkgbuild  hoodle-core.cabal  hoodle-core.pkgbuild  hsmagick.pkgbuild  hspec-discover.pkgbuild  ieee.pkgbuild  leksah-server.cabal  leksah-server.cabal~  nano-hmac.pkgbuild  poppler.pkgbuild  postgresql-libpq.pkgbuild  series  snap.cabal  text-icu.pkgbuild  webkitgtk3.pkgbuild  zlib-conduit.pkgbuild
(+323 files in other folders)
