Index: cblrepo/haskell-hoodle-core/src/hoodle-core-0.14/hoodle-core.cabal
===================================================================
--- cblrepo.orig/haskell-hoodle-core/src/hoodle-core-0.14/hoodle-core.cabal
+++ cblrepo/haskell-hoodle-core/src/hoodle-core-0.14/hoodle-core.cabal
@@ -60,6 +60,7 @@ Library
                    network, 
                    network-info, 
                    network-simple >= 0.3,
+                   network-uri,
                    old-locale >= 1.0, 
                    pango > 0.12,
                    poppler >= 0.12.2.2, 
