Index: hsbuild/haskell-leksah-server/src/leksah-server-0.14.3.0/leksah-server.cabal
===================================================================
--- hsbuild.orig/haskell-leksah-server/src/leksah-server-0.14.3.0/leksah-server.cabal
+++ hsbuild/haskell-leksah-server/src/leksah-server-0.14.3.0/leksah-server.cabal
@@ -41,7 +41,7 @@ library
                transformers >=0.2.2.0 && <0.5, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.3,
                HTTP >=4000.1.2 && <4000.3
     if (impl(ghc >= 7.8))
-       build-depends: haddock >= 2.7.2 && <2.15
+       build-depends: haddock-api
     else
       if (impl(ghc >= 7.6))
          build-depends: haddock >= 2.7.2 && <2.14
@@ -104,7 +104,7 @@ executable leksah-server
                transformers >=0.2.2.0 && <0.5, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.3,
                HTTP >=4000.1.2 && <4000.3
     if (impl(ghc >= 7.8))
-       build-depends: haddock >= 2.7.2 && <2.15
+       build-depends: haddock-api
     else
       if (impl(ghc >= 7.6))
          build-depends: haddock >= 2.7.2 && <2.14
