Index: cblrepo/snap-0.13.3.2/snap.cabal
===================================================================
--- cblrepo.orig/snap-0.13.3.2/snap.cabal
+++ cblrepo/snap-0.13.3.2/snap.cabal
@@ -186,7 +186,7 @@ Library
   else
     build-depends:
       base                      >= 4.4      && < 5,
-      lens                      >= 3.7.6    && < 4.7
+      lens                      >= 3.7.6
 
   extensions:
     BangPatterns,
